# networkframe

./: .bumpversion.cfg  .cz.toml  .old-bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  tox.ini  versions.json
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: daily-bulid-status.yml  dev-docs.yml  dev.yml  docs.yml  manual-release.yml  mike-docs.yml  preview.yml  release-test.yml  release.yml  report.yml  setup.yml  test-release.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api/: index.html
0.1.0/changelog/: index.html
0.1.0/contributing/: index.html
0.1.0/installation/: index.html
0.1.0/usage/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api/: index.html
0.2.0/changelog/: index.html
0.2.0/contributing/: index.html
0.2.0/installation/: index.html
0.2.0/search/: search_index.json
0.2.0/usage/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/api/: index.html
0.2.1/changelog/: index.html
0.2.1/contributing/: index.html
0.2.1/installation/: index.html
0.2.1/search/: search_index.json
0.2.1/usage/: index.html
0.3/: 404.html  index.html  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/api/: index.html
0.3.0/changelog/: index.html
0.3.0/contributing/: index.html
0.3.0/installation/: index.html
0.3.0/usage/: index.html
0.3.1/: 404.html  index.html  objects.inv  sitemap.xml
0.3.1/api/: index.html
0.3.1/changelog/: index.html
0.3.1/contributing/: index.html
0.3.1/installation/: index.html
0.3.1/usage/: index.html
0.3/api/: index.html
0.3/changelog/: index.html
0.3/contributing/: index.html
0.3/installation/: index.html
0.3/usage/: index.html
0.4/: 404.html  index.html  sitemap.xml
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/api/: index.html
0.4.0/changelog/: index.html
0.4.0/contributing/: index.html
0.4.0/installation/: index.html
0.4.0/reference/networkframe/: index.html
0.4.0/reference/nodegroupby/: index.html
0.4.0/reference/reference/: index.html
0.4.0/usage/: index.html
0.4/changelog/: index.html
0.4/contributing/: index.html
0.4/installation/: index.html
0.4/reference/networkframe/: index.html
0.4/reference/nodegroupby/: index.html
0.4/usage/: index.html
0.5/: 404.html  index.html  objects.inv  sitemap.xml
0.5/changelog/: index.html
0.5/contributing/: index.html
0.5/installation/: index.html
0.5/search/: search_index.json
0.5/usage/: index.html
api/: index.html
changelog/: index.html
contributing/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/changelog/: index.html
dev/contributing/: index.html
dev/installation/: index.html
dev/search/: search_index.json
dev/usage/: index.html
docs/: api.md  installation.md  usage.md
docs/reference/: networkframe.md  nodegroupby.md
installation/: index.html
networkframe/: __init__.py  algorithms.py  groupby.py  indexer.py  multilayer.py  networkframe.py  types.py
networkframe/test/: __init__.py  test.py
search/: search_index.json
tests/: __init__.py  test_networkframe.py
usage/: index.html
(+7 files in other folders)
