[tool]
[tool.poetry]
name = "networkframe"
version = "0.1.0"
homepage = "https://github.com/bdpedigo/networkframe"
description = "Lightweight representations of networks using Pandas DataFrames."
authors = ["Ben Pedigo <ben.pedigo@alleninstitute.org>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "networkframe" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pytest = "^7.4.3"
mypy = "^1.7.1"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.5"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocstrings = {extras = ["crystal", "python"], version = "^0.24.0"}
mkdocs-jupyter = "^0.24.6"
mknotebooks = "^0.8.0"
mkdocs-autorefs = "^0.5.0"
mkdocs-material-extensions = "^1.3.1"
mkdocs-material = "^9.5.2"
twine = "^4.0.2"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.ruff]
ignore-init-module-imports = true
