[tool]
[tool.poetry]
authors = ["Ben Pedigo <ben.pedigo@alleninstitute.org>"]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
description = "Lightweight representations of networks using Pandas DataFrames."
homepage = "https://github.com/bdpedigo/networkframe"
license = "MIT"
name = "networkframe"
packages = [
    { include = "networkframe" },
    { include = "tests", format = "sdist" },
]
readme = "README.md"
version = "0.3.0"

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0"

[tool.poetry.group.dev.dependencies]
bump-my-version = "^0.12.0"
mike = "^2.0.0"
mkdocs = "^1.5.3"
mkdocs-autorefs = "^0.5.0"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-jupyter = "^0.24.6"
mkdocs-material = "^9.5.2"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = { extras = ["crystal", "python"], version = "^0.24.0" }
mknotebooks = "^0.8.0"
mypy = "^1.7.1"
pymdown-extensions = "^10.5"
pytest = "^7.4.3"
ruff = "^0.1.7"
twine = "^4.0.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry"]

[tool.ruff]
ignore-init-module-imports = true
